--- a/package.json
+++ b/package.json
@@ -1,17 +1,35 @@
 {
   "name": "@bostaunieux/caavo-mqtt-bridge",
-  "version": "0.5.0",
-  "description": "Node service for controlling a caavo hub",
+  "version": "1.0.0",
+  "description": "Node service for controlling a caavo control center hub",
   "author": "bostaunieux",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.20",
+    "log-timestamp": "^0.3.0",
     "mqtt": "^4.2.6",
     "uuid": "^8.3.2"
   },
+  "engines": {
+    "node": ">=10.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.19",
+    "@types/ws": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
+  },
   "scripts": {
-    "start": "node controller.js"
+    "start": "node -r dotenv/config dist/index.js",
+    "lint": "eslint '**/*.ts' --fix",
+    "prettier": "prettier **/*.ts --write",
+    "build": "rm -rf dist && tsc"
   }
 }
