--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "moduleResolution" : "node",
     "outDir": "./dist",
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "resolveJsonModule": true
   },
   "include": [
     "./src/**/*.ts"
