--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.20",
     "log-timestamp": "^0.3.0",
